[package]
name = "rust_hello_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
askama = { version = "0.11.1", features = ["with-actix-web"] }
serde = { version = "1.0.145", features = ["derive"] }